New Future Rooms

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -289,6 +289,51 @@ ITM 3 7,7
 EXT 1,8 0 0,0
 PAL 2
 
+ROOM 9
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,0
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,0,0,0,0,0,c,c,0,0,0,0,0,b,b
+b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,0,w,w,w,w,0,0,w,w,w,w,0,b,b
+b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
+b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
+NAME Future 2 - Mantle
+EXT 7,15 0 0,0
+EXT 8,15 0 0,0
+PAL 2
+
+ROOM a
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
+b,b,b,0,0,1t,0,0,w,1t,w,0,0,b,b,b
+b,b,b,0,0,1u,0,0,w,1u,w,0,0,b,b,b
+b,b,b,0,0,0,0,0,0,0,0,0,0,b,b,b
+b,b,b,0,0,0,0,0,0,0,0,0,0,b,b,b
+b,b,b,0,w,1t,w,0,w,1t,w,0,0,b,b,b
+b,b,b,0,w,1u,w,0,w,1u,w,0,0,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,0,b,b,b,b
+b,b,b,b,b,b,b,b,b,b,b,0,b,b,b,b
+NAME Future 3 - Work
+ITM 5 3,13
+ITM 5 12,8
+EXT 11,15 0 0,0
+PAL 2
+
 TIL 10
 00011000
 00011000
