Created vomit and and fried chicken items

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -1357,6 +1357,30 @@ ITM 3
 NAME Cheap Beer
 DLG ITM_3
 
+ITM 4
+00111100
+01011110
+11111111
+00111011
+01111110
+11011111
+01111110
+00101100
+NAME Vomit
+DLG ITM_4
+
+ITM 5
+00001111
+00001111
+00011111
+00011111
+00011100
+00100000
+11000000
+01000000
+NAME Fried Chicken
+DLG ITM_5
+
 DLG SPR_1
 "Tomorrow is a mystery."
 
