--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -1637,6 +1637,30 @@ DLG SPR_h
 DLG ITM_3
 R downed a glass of cheap beer.
 
+DLG SPR_i
+"""
+R: {sequence
+  - This is when I took over as head of my club.
+  - Poor leadership lead to only two members attending.
+  - I was the only one running, so everything fell to me.
+  - I wasn't anyone's choice. I was just... Convenient...
+  - But this was my chance to make change...
+  - Rebuilding the club was my second lease at life...
+}
+"""
+
+DLG SPR_j
+Voter: I vote for you!
+
+DLG SPR_k
+Voter: I vote for you too!
+
+DLG ITM_4
+B's {rbw}vomit{rbw} got stuck on R's shoe.
+
+DLG ITM_5
+R found some fried chicken.
+
 VAR H4
 0
 
