A lot of problems because of desync. Need to re-add sprites

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -1105,19 +1105,6 @@ NAME B
 DLG SPR_4
 POS 2 2,1
 
-SPR i
-00110000
-00111000
-01111111
-11011111
-11111111
-01111010
-00011110
-00111100
-NAME Puke
-DLG SPR_5
-POS 2 2,2
-
 SPR j
 00111100
 00111100
@@ -1129,7 +1116,6 @@ SPR j
 00100100
 NAME Girl
 DLG SPR_7
-POS 2 4,8
 
 SPR l
 00111100
@@ -1142,7 +1128,6 @@ SPR l
 00100100
 NAME Girl 2
 DLG SPR_6
-POS 2 6,8
 
 SPR o
 00000000
@@ -1155,7 +1140,6 @@ SPR o
 00100100
 NAME C History 0
 DLG SPR_8
-POS 1 5,10
 
 SPR p
 00000000
@@ -1168,7 +1152,6 @@ SPR p
 00100100
 NAME Development C
 DLG SPR_9
-POS 4 11,9
 
 SPR q
 00000100
@@ -1181,7 +1164,6 @@ SPR q
 00111100
 NAME Crisis Phone
 DLG SPR_a
-POS 5 4,13
 
 SPR r
 00000000
@@ -1194,7 +1176,6 @@ SPR r
 00000000
 NAME Christmas C
 DLG SPR_b
-POS 6 7,2
 
 SPR s
 00000000
@@ -1207,7 +1188,6 @@ SPR s
 00100100
 NAME Restaurant C
 DLG SPR_d
-POS 7 13,2
 
 SPR t
 00011000
@@ -1220,7 +1200,6 @@ SPR t
 00100100
 NAME X
 DLG SPR_c
-POS 6 9,4
 
 SPR u
 00001000
@@ -1242,7 +1221,6 @@ SPR u
 00100100
 NAME R?
 DLG SPR_e
-POS 6 4,3
 
 SPR w
 00111100
@@ -1255,7 +1233,6 @@ SPR w
 00100100
 NAME Future Girl 1
 DLG SPR_h
-POS 8 5,9
 
 SPR x
 00111100
@@ -1268,7 +1245,6 @@ SPR x
 00100100
 NAME Future Girl 2
 DLG SPR_f
-POS 8 7,9
 
 SPR y
 00011000
@@ -1290,7 +1266,27 @@ SPR y
 01000010
 NAME L
 DLG SPR_g
-POS 8 6,9
+
+SPR z
+00001000
+00010000
+00011000
+00101010
+10011101
+00111000
+00101100
+00100100
+>
+00011000
+00001000
+00011000
+01010100
+10110101
+00101100
+00010000
+00100100
+NAME Pres R?
+DLG SPR_i
 
 ITM 0
 00011000
