--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -83,7 +83,7 @@ EXT 0,7 1 4,10
 EXT 0,8 1 4,10
 EXT 15,7 b 8,7
 EXT 15,8 b 8,7
-EXT 7,15 c 8,6
+EXT 7,15 3 8,9
 EXT 8,15 c 8,6
 PAL 0
 
@@ -144,23 +144,26 @@ EXT 15,4 0 7,7
 PAL 2
 
 ROOM 3
+14,14,14,14,14,14,14,14,14,14,14,14,14,14,14,14
+16,17,0,16,17,0,16,17,0,16,17,0,16,17,0,16
+15,15,15,15,15,15,15,15,15,15,15,15,15,15,15,15
+14,14,14,14,14,14,14,14,14,14,14,14,14,14,14,14
+0,16,17,0,16,17,0,16,17,0,16,17,0,16,17,0
+15,15,15,15,15,15,15,15,15,15,15,15,15,15,15,15
+14,14,14,14,14,14,14,14,14,14,14,14,14,14,14,14
+16,17,0,16,17,0,16,17,0,16,17,0,16,17,0,16
+15,15,15,15,15,15,15,15,0,15,15,15,15,15,15,15
+14,14,14,14,14,14,14,14,0,14,14,14,14,14,14,14
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-NAME Present 0
+a,a,a,a,a,a,a,a,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+NAME Present 0 - End
+EXT 0,10 0 7,7
+END 0 8,7
+END 1 15,10
 PAL 3
 
 ROOM 4
@@ -380,6 +383,26 @@ ITM 6 4,4
 EXT 10,12 0 8,8
 PAL 1
 
+ROOM d
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+NAME Present Past 1 - 
+PAL 1
+
 TIL 10
 00011000
 00011000
@@ -435,6 +458,7 @@ TIL 14
 00000000
 00000000
 NAME Road 0
+WAL true
 
 TIL 15
 00000000
@@ -446,6 +470,7 @@ TIL 15
 00000000
 11111111
 NAME Road 1
+WAL true
 
 TIL 16
 00000000
@@ -457,6 +482,7 @@ TIL 16
 00000000
 00000000
 NAME Road 2
+WAL true
 
 TIL 17
 00000000
@@ -468,6 +494,7 @@ TIL 17
 00000000
 00000000
 NAME Road 3
+WAL true
 
 TIL 18
 00000000
@@ -1324,6 +1351,28 @@ NAME Heartbreak C
 DLG SPR_n
 POS c 6,6
 
+SPR 16
+00001000
+00010000
+00011000
+00101010
+10011101
+00111000
+00101100
+00100100
+>
+00011000
+00001000
+00011000
+01010100
+10110101
+00101100
+00010000
+00100100
+NAME Broken R
+DLG SPR_o
+POS 3 8,11
+
 SPR A
 00011000
 00011000
@@ -2053,6 +2102,32 @@ DLG SPR_n
     C: R, we need to talk about this.
 }
 """
+
+DLG SPR_o
+"""
+R: {sequence
+  - That brings us to now...
+
+  - This night, I wanted it all to end.
+  - I stood by the road a long time.
+  - You might not know the full story.
+  - Or you know all I can fit of the story into this assignment.
+  - So I give you, dear reader, my choice.
+  - To the left, you can return to the start.
+    R: To see the rest of my story if you have yet to.
+    R: To the right, you take the path I have chosen.
+    R: To struggle through the pain.
+    
+    R: Or if you think I've suffered enough.
+    R: Walk on to the road.
+}
+"""
+
+END 0
+Death
+
+END 1
+Had I died that night, I would never
 
 VAR H4
 0
