--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -83,7 +83,7 @@ EXT 0,7 1 4,10
 EXT 0,8 1 4,10
 EXT 15,7 b 8,7
 EXT 15,8 b 8,7
-EXT 7,15 d 7,7
+EXT 7,15 c 8,6
 EXT 8,15 c 8,6
 PAL 0
 
@@ -279,7 +279,7 @@ b,0,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,0,b,0,0,1r,1s,0,0,b,b,b,b,b,b,b
 b,0,b,0,0,c,c,0,0,b,b,b,b,b,b,b
 b,0,0,0,0,0,0,0,0,b,b,b,b,b,b,b
-b,0,b,0,0,0,0,0,0,b,b,b,b,b,b,b
+b,0,b,0,0,0,0,2f,0,b,b,b,b,b,b,b
 b,0,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,0,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,0,b,b,b,b,b,b,b,b,b,b,b,b,b,b
@@ -306,7 +306,7 @@ b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,0,0,0,0,0,c,c,0,0,0,0,0,b,b
 b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
-b,b,0,w,w,w,w,0,0,w,w,w,w,0,b,b
+b,b,0,w,w,w,w,0,2e,w,w,w,w,0,b,b
 b,b,0,0,0,0,0,0,0,0,0,0,0,0,b,b
 b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
 b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
@@ -364,14 +364,14 @@ ROOM c
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
-a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
-a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
-a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
-a,a,a,a,0,0,0,c,0,0,0,0,a,a,a,a
-a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
-a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
-a,a,a,a,0,0,0,0,0,0,0,0,a,a,a,a
-a,a,a,a,a,a,a,a,a,a,0,a,a,a,a,a
+a,a,a,b,b,b,b,b,b,b,b,b,b,a,a,a
+a,a,a,b,0,0,0,0,0,0,0,0,b,a,a,a
+a,a,a,b,0,0,0,0,0,0,0,0,b,a,a,a
+a,a,a,b,0,0,0,c,0,0,0,0,b,a,a,a
+a,a,a,b,0,0,0,0,0,0,0,0,b,a,a,a
+a,a,a,b,0,0,0,0,0,0,0,0,b,a,a,a
+a,a,a,b,0,0,0,0,0,0,0,0,b,a,a,a
+a,a,a,b,b,b,b,b,b,b,0,b,b,a,a,a
 a,a,a,a,a,a,a,a,a,a,0,a,a,a,a,a
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -380,7 +380,7 @@ a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 NAME Present Past 2 - Heartbreak
 ITM 6 11,4
 ITM 6 4,4
-EXT 10,12 0 0,0
+EXT 10,12 f 7,6
 PAL 1
 
 ROOM d
@@ -401,8 +401,56 @@ a,a,a,a,a,a,a,0,a,a,a,a,a,a,a,a
 a,a,a,a,a,a,a,0,a,a,a,a,a,a,a,a
 a,a,a,a,a,a,a,0,a,a,a,a,a,a,a,a
 NAME Present Past 1 - Begging
-EXT 7,15 0 0,0
+EXT 7,15 e 7,8
 PAL 1
+
+ROOM e
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,0,0,0,0,0,0,a,a,a,a,a
+a,a,a,a,a,0,0,0,0,0,0,a,a,a,a,a
+a,a,a,0,0,0,0,0,0,0,0,0,0,a,a,a
+a,a,a,0,0,0,0,0,0,0,0,0,0,a,a,a
+a,a,a,a,a,0,0,0,0,0,0,a,a,a,a,a
+a,a,a,a,a,0,0,0,0,0,0,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
+NAME Present Future 1 - Violin
+ITM 7 12,7
+ITM 7 3,8
+ITM 7 7,12
+EXT 7,0 3 8,10
+EXT 8,0 3 8,10
+PAL 2
+
+ROOM f
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,d,0,d,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+a,a,a,a,a,a,0,0,0,a,a,a,a,a,a,a
+NAME Present Future 2 - Distance
+EXT 6,15 d 7,7
+EXT 7,15 d 7,7
+EXT 8,15 d 7,7
+PAL 2
 
 TIL 10
 00011000
@@ -1265,20 +1313,7 @@ TIL 2d
 NAME Rear Windshield Right
 WAL true
 
-SPR 10
-00111100
-00111100
-01011010
-00011000
-00111100
-01111110
-00100100
-00100100
-NAME Voter 1
-DLG SPR_j
-POS 9 7,12
-
-SPR 11
+TIL 2e
 00111100
 00111100
 01011010
@@ -1288,8 +1323,32 @@ SPR 11
 00100100
 00100100
 NAME Voter 2
-DLG SPR_k
-POS 9 8,12
+WAL true
+
+TIL 2f
+00111100
+01011010
+01011010
+00111100
+00111100
+01011010
+00011000
+00100100
+NAME Future Girl 2
+WAL true
+
+SPR 10
+00111100
+00111100
+01011010
+00011000
+00111100
+01111110
+00100100
+00100100
+NAME Voter
+DLG SPR_j
+POS 9 7,12
 
 SPR 12
 00111100
@@ -1386,6 +1445,32 @@ SPR 17
 NAME Begging Phone
 DLG SPR_p
 POS d 8,7
+
+SPR 18
+00111100
+00111100
+00111100
+00011000
+01111110
+00111100
+00111100
+00100100
+NAME G
+DLG SPR_q
+POS e 8,8
+
+SPR 19
+00011000
+00011000
+00111100
+01011010
+00011000
+00100100
+00100100
+00100100
+NAME CK
+DLG SPR_k
+POS f 6,7
 
 SPR A
 00011000
@@ -1611,19 +1696,6 @@ NAME Future Girl 1
 DLG SPR_h
 POS 8 5,9
 
-SPR x
-00111100
-01011010
-01011010
-00111100
-00111100
-01011010
-00011000
-00100100
-NAME Future Girl 2
-DLG SPR_f
-POS 8 7,9
-
 SPR y
 00011000
 00011000
@@ -1667,6 +1739,54 @@ SPR z
 NAME Pres R?
 DLG SPR_i
 POS 9 8,9
+
+SPR 1a
+00001000
+00010000
+00011000
+00101010
+10011101
+00111000
+00101100
+00100100
+>
+00011000
+00001000
+00011000
+01010100
+10110101
+00101100
+00010000
+00100100
+NAME Walk Away R
+DLG SPR_f
+POS f 7,4
+
+SPR 1b
+00011000
+00011000
+00111100
+01011010
+00011000
+00011000
+00011000
+00100100
+NAME N
+DLG SPR_r
+POS f 8,9
+
+SPR 1c
+00011000
+00111100
+00011000
+00111100
+01011010
+00011000
+00100100
+00100100
+NAME I
+DLG SPR_s
+POS f 6,12
 
 ITM 0
 00011000
@@ -1763,12 +1883,22 @@ ITM 6
 01011010
 00111100
 01011010
-01101110
+01100110
 00010000
 00111000
 00001000
 NAME Flower
 DLG ITM_6
+
+ITM 7
+00000011
+00000101
+00001010
+00010100
+00101000
+01110000
+11100000
+11000000
 
 DLG SPR_1
 "Tomorrow is a mystery."
@@ -1995,9 +2125,6 @@ DLG SPR_e
 }
 """
 
-DLG SPR_f
-Girl: Boy, you so naughty.
-
 DLG SPR_g
 """
 L: {shuffle
@@ -2039,10 +2166,7 @@ R: {sequence
 """
 
 DLG SPR_j
-Voter: I vote for you!
-
-DLG SPR_k
-Voter: I vote for you too!
+Voter: We vote for you!
 
 DLG ITM_4
 B's {rbw}vomit{rbw} got stuck on R's shoe.
@@ -2152,6 +2276,46 @@ R: Help...
 }
 """
 
+DLG SPR_q
+"""
+{sequence
+  - 
+  - 
+}
+"""
+
+DLG SPR_k
+"""
+CK: R! You promised you would stop being sad!
+CK: I got to go now...
+"""
+
+DLG SPR_r
+"""
+N: R, just think about what I said.
+N: I'll talk to you another time.
+"""
+
+DLG SPR_s
+"""
+I: You gotta promise to stop hurting yourself!
+I: I'll meet you soon!
+"""
+
+DLG SPR_f
+"""
+{
+  - PF2 == 1 ?
+
+  - PF2 == 2 ?
+
+  - PF2 == 3 ?
+
+  - else ?
+
+}
+"""
+
 END 0
 Death
 
@@ -2162,6 +2326,9 @@ VAR H4
 0
 
 VAR H42
+0
+
+VAR PF2
 0
 
 
