Added endings for first prototype.

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -4,10 +4,10 @@
 <!-- HEADER -->
 <head>
 
-<title></title>
+<title>The Present</title>
 
 <script type="bitsyGameData" id="exportedGameData">
-
+The Present
 
 # BITSY VERSION 4.6
 
@@ -2335,10 +2335,10 @@ DLG SPR_q
 """
 
 END 0
-Death
+The pain stopped.
 
 END 1
-Had I died that night, I would never
+R: This is my gift to myself...
 
 VAR H4
 0
