--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -21,9 +21,9 @@ NAME Beginning
 
 PAL 1
 NAME History 0
-68,68,68
-136,136,136
-187,187,187
+85,85,85
+112,112,112
+153,153,153
 
 PAL 2
 NAME Future 0
@@ -39,27 +39,39 @@ NAME Now 0
 
 PAL 4
 NAME History 1
-51,51,51
-153,153,153
-204,204,204
+68,68,68
+120,120,120
+170,170,170
 
 PAL 5
 NAME History 2
-34,34,34
-170,170,170
-221,221,221
+51,51,51
+128,128,128
+187,187,187
 
 PAL 6
 NAME History 3
-17,17,17
-187,187,187
-238,238,238
+34,34,34
+136,136,136
+204,204,204
 
 PAL 7
 NAME History 4
-0,0,0
-204,204,204
-255,255,255
+17,17,17
+144,144,144
+221,221,221
+
+PAL 8
+NAME Present Past 2
+9,9,9
+187,187,187
+238,238,150
+
+PAL 9
+NAME Present Past 1
+3,3,3
+221,221,221
+238,238,72
 
 ROOM 0
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
@@ -164,7 +176,7 @@ NAME Present 0 - End
 EXT 0,10 0 7,7
 END 0 8,7
 END 1 15,10
-PAL 3
+PAL 0
 
 ROOM 4
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
@@ -381,7 +393,7 @@ NAME Present Past 2 - Heartbreak
 ITM 6 11,4
 ITM 6 4,4
 EXT 10,12 f 7,6
-PAL 1
+PAL 8
 
 ROOM d
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
@@ -402,7 +414,7 @@ a,a,a,a,a,a,a,0,a,a,a,a,a,a,a,a
 a,a,a,a,a,a,a,0,a,a,a,a,a,a,a,a
 NAME Present Past 1 - Begging
 EXT 7,15 e 7,8
-PAL 1
+PAL 9
 
 ROOM e
 a,a,a,a,a,a,a,0,0,a,a,a,a,a,a,a
