--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -27,15 +27,15 @@ NAME History 0
 
 PAL 2
 NAME Future 0
-221,221,221
-0,208,208
-240,240,0
+255,156,45
+79,255,248
+72,232,226
 
 PAL 3
-NAME Now 0
-0,0,0
-255,255,255
-255,255,0
+NAME Future 4
+255,203,137
+209,232,226
+201,224,218
 
 PAL 4
 NAME History 1
@@ -72,6 +72,12 @@ NAME Present Past 1
 3,3,3
 221,221,221
 238,238,72
+
+PAL a
+NAME Present Future 2
+255,255,255
+255,255,255
+255,255,255
 
 ROOM 0
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
@@ -370,7 +376,7 @@ a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
 NAME Future 4 - The One?
 EXT 10,7 a 6,8
-PAL 2
+PAL 3
 
 ROOM c
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
