Colours for future

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -28,8 +28,8 @@ NAME History 0
 PAL 2
 NAME Future 0
 255,156,45
+17,100,102
 79,255,248
-72,232,226
 
 PAL 3
 NAME Future 4
@@ -78,6 +78,30 @@ NAME Present Future 2
 255,255,255
 255,255,255
 255,255,255
+
+PAL b
+NAME Present Future 1
+255,255,255
+255,255,255
+255,255,255
+
+PAL c
+NAME Future 3
+255,204,138
+209,232,228
+202,225,218
+
+PAL d
+NAME Future 2
+255,188,107
+145,188,186
+161,235,228
+
+PAL e
+NAME Future 1
+255,172,76
+81,144,144
+120,245,238
 
 ROOM 0
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
@@ -309,7 +333,7 @@ ITM 3 3,9
 ITM 3 8,9
 ITM 3 7,7
 EXT 1,8 2 1,12
-PAL 2
+PAL e
 
 ROOM 9
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
@@ -331,7 +355,7 @@ b,b,b,b,b,b,b,0,0,b,b,b,b,b,b,b
 NAME Future 2 - Mantle
 EXT 7,15 8 4,9
 EXT 8,15 8 4,9
-PAL 2
+PAL d
 
 ROOM a
 b,b,b,b,b,b,b,b,b,b,b,b,b,b,b,b
@@ -355,7 +379,7 @@ ITM 5 3,13
 ITM 5 12,8
 ITM 5 12,13
 EXT 11,15 9 7,9
-PAL 2
+PAL c
 
 ROOM b
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
