--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -75,15 +75,15 @@ NAME Present Past 1
 
 PAL a
 NAME Present Future 2
-255,255,255
-255,255,255
-255,255,255
+170,104,30
+176,204,204
+197,255,83
 
 PAL b
 NAME Present Future 1
-255,255,255
-255,255,255
-255,255,255
+85,52,15
+97,153,153
+139,255,166
 
 PAL c
 NAME Future 3
@@ -469,7 +469,7 @@ ITM 7 3,8
 ITM 7 7,12
 EXT 7,0 3 8,10
 EXT 8,0 3 8,10
-PAL 2
+PAL b
 
 ROOM f
 a,a,a,a,a,a,a,a,a,a,a,a,a,a,a,a
@@ -492,7 +492,7 @@ NAME Present Future 2 - Distance
 EXT 6,15 d 7,7
 EXT 7,15 d 7,7
 EXT 8,15 d 7,7
-PAL 2
+PAL a
 
 TIL 10
 00011000
