Item prompt to talk to H

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -1954,6 +1954,18 @@ ITM 7
 NAME Knife
 DLG ITM_7
 
+ITM 8
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+NAME Prompt
+DLG ITM_8
+
 DLG SPR_1
 "Tomorrow is a mystery."
 
