A lot of play testers miss the text, so just lump it together

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2221,14 +2221,12 @@ R downed a glass of cheap beer.
 
 DLG SPR_i
 """
-R: {sequence
-  - This is when I took over as head of my club.
-  - Poor leadership lead to only two members attending.
-  - I was the only one running, so everything fell to me.
-  - I wasn't anyone's choice. I was just... Convenient...
-  - But this was my chance to make change...
-  - Rebuilding the club was my second lease at life...
-}
+R: This is when I took over as head of my club.
+R: Poor leadership lead to only two members attending.
+R: I was the only one running, so everything fell to me.
+R: I wasn't anyone's choice. I was just... Convenient...
+R: But this was my chance to make change...
+R: Rebuilding the club was my second lease at life...
 """
 
 DLG SPR_j
