Prompt for player to talk to both V and RB

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2236,7 +2236,11 @@ DLG ITM_4
 B's {rbw}vomit{rbw} got stuck on R's shoe.
 
 DLG ITM_5
+"""
 R found some fried chicken.
+
+Maybe he should share with V and RB.
+"""
 
 DLG SPR_5
 """
