Turn off item prompt if alr asked out.

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2278,7 +2278,7 @@ H: {sequence
   - Hm? My club? It can be challenging to run.
   - What about your club?
   - Is that so? But you seem to be doing quite well!
-  - Catch a movie? Sure!
+  - Catch a movie? Sure! {Ask = 1}
   - Thanks for the ride home, R. Goodnight!
 }
 """
