--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2073,8 +2073,12 @@ DLG SPR_a
 """
 C: {sequence
   - R, can I tell you something?
+    
+    R: Yeah?
   - But you have to promise me something first!
+    R: Ok?
   - Promise you won't get upset or judge me.
+    R: Alright, I promise.
   - Okay, so...
   - I was out clubbing last night and...
   - I hooked up with this guy...
