--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2088,6 +2088,7 @@ C: {sequence
   - He removed the rubber halfway...
   - And I'm scared he gave me something...
   - {shk}And I just need someone to talk to, R.{shk}
+    R: It's alright, you can talk to me.
   - Really? It doesn't bother you?
   - Because I would completely understand...
   - {shk}If you didn't want to be friends anymore.{shk}
