--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2092,7 +2092,10 @@ C: {sequence
   - Really? It doesn't bother you?
   - Because I would completely understand...
   - {shk}If you didn't want to be friends anymore.{shk}
+    R: No, C. I'm still your friend.
   - Really? Thank you, R.
+    
+    R: So I'll see you Tuesday?
   - Yup, see you Tuesday. Bye.
 }
 """
