Removed 1 prompt, and debug

--- a/Assignment 3/The Present.html
+++ b/Assignment 3/The Present.html
@@ -2146,8 +2146,7 @@ DLG ITM_2
     Maybe R should talk to C again.
   - {item "Beer"} == 3 ?
     R can probably bear the rejection now.
-    Maybe R should talk to C again.
-  - {item "Booze"} == 4 ?
+  - {item "Beer"} == 4 ?
     Maybe R should walk home.
 }
 """
